<resources>
    <string name="app_name" translatable="false">GCOKotlin</string>
    <string name="txt_dashbord">Dashboard</string>
    <string name="txt_performance">Performance</string>
    <string name="txt_activities">Activities</string>
    <string name="txt_Archive">Archive</string>
    <string name="txt_Announcements">Announcements</string>
    <string name="sign_in_to_gco_news_room">Sign in to GCO News Room</string>
    <string name="email_address">Email address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_continue">Continue</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_registered_username">Enter your registered username</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go Back</string>
    <string name="title_forgot_password">Forgot password ?</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="we_have_sent_otp_to_your_registered_email_address_your_email">We have sent otp to your registered email address “%s”</string>
    <string name="didn_t_receive_the_otp_yet">Didn’t receive the OTP yet?</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="seconds">seconds</string>
    <string name="re_send">Re-send</string>
    <string name="sign_in">Sign in</string>
    <string name="new_password">New Password</string>
    <string name="login_now">Login Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="uppercase_letters_a_z">Uppercase letters (A-Z)</string>
    <string name="lowercase_letters_a_z">Lowercase letters (a-z)</string>
    <string name="numbers_0_9">Numbers (0-9)</string>
    <string name="special_characters_etc">Special characters (!, @, #, $, %, ^, *, etc.)</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_criteria">Password criteria.</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_criteria_not_satisfied">Password criteria not satisfied</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_is_changed">Password is changed</string>
    <string name="email_is_sent">Email is sent</string>
    <string name="we_have_sent_an_email_to_email_with_a_link_to_reset_your_password">We have sent an email to %s with a link to reset your password</string>
    <string name="done">Done</string>
    <string name="txt_location">Location</string>
    <string name="txt_date_time">Date and Time</string>
    <string name="txt_ministry_of_interiors">Ministry of interior Qatar</string>
    <string name="txt_search_activities">Search for activities...</string>
    <string name="txt_search_archieves">Search for archieves…</string>
    <string name="txt_search_announcement">Search for announcements......</string>
    <string name="txt_result_matching">Results matching</string>
    <string name="txt_cyber_security_events">Cybersecurity events</string>
    <string name="txt_no_item_found_title">No items founded.</string>
    <string name="txt_no_item_found_desc">Lorem ipsum dolor sit amet consectetur.Vitae orci erat id elementum</string>
    <string name="txt_view_latest_events">View latest events</string>
    <string name="txt_load_more">Load More</string>
    <string name="txt_filters">Filters</string>
    <string name="txt_clear_all">Clear all</string>
    <string name="txt_entity">Entity</string>
    <string name="txt_activity_type">Activity Type</string>
    <string name="txt_status">Status</string>
    <string name="txt_accepted">Accepted</string>
    <string name="txt_declined">Declined</string>
    <string name="txt_pending_review">Pending review</string>
    <string name="txt_pending_revision">Pending revision</string>
    <string name="txt_date_range">Date range</string>
    <string name="txt_start_date">Start date</string>
    <string name="txt_end_date">End date</string>
    <string name="txt_search">Search</string>
    <string name="txt_sort_by">Sort by</string>
    <string name="txt_all">All</string>
    <string name="txt_read">Read</string>
    <string name="txt_unread">Unread</string>
</resources>