<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/llvSignInToNewsRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:text="@string/forgot_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="@string/new_password" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clNewPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_login_edit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivNewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="9dp"
                    android:layout_marginStart="7dp"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_login_password" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusForward="@id/btnContinue"
                    android:paddingVertical="18dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login_edittext_hint_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivNewPasswordVisibility"
                    app:layout_constraintStart_toEndOf="@+id/ivNewPassword"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivNewPasswordVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="14dp"
                    android:paddingVertical="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_login_password_visibility" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNewPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="viewStart"
                android:textColor="@color/validation_error_text_color"
                android:visibility="gone"
                tools:text="password error"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="@string/confirm_new_password" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clConfirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_login_edit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="9dp"
                    android:layout_marginStart="7dp"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_login_password" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusForward="@id/btnContinue"
                    android:paddingVertical="18dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login_edittext_hint_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivConfirmPasswordVisibility"
                    app:layout_constraintStart_toEndOf="@+id/ivConfirmPassword"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="aahamed@applab.qa" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivConfirmPasswordVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="14dp"
                    android:paddingVertical="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_login_password_visibility" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="viewStart"
                android:textColor="@color/validation_error_text_color"
                android:visibility="gone"
                tools:text="password error"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordCriteriaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="@string/password_criteria" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordCriteria1UpperCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/update_password_criteria_tick"
                android:drawablePadding="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/update_password_criteria_green"
                android:textSize="14sp"
                tools:text="@string/uppercase_letters_a_z" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordCriteria2LowerCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:drawableStart="@drawable/update_password_criteria_tick"
                android:drawablePadding="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/update_password_criteria_green"
                android:textSize="14sp"
                tools:text="@string/lowercase_letters_a_z" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordCriteria3Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:drawableStart="@drawable/update_password_criteria_tick"
                android:drawablePadding="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/update_password_criteria_green"
                android:textSize="14sp"
                tools:text="@string/numbers_0_9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordCriteria4SpecialCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:drawableStart="@drawable/update_password_criteria_tick"
                android:drawablePadding="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/update_password_criteria_green"
                android:textSize="14sp"
                tools:text="@string/special_characters_etc" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_login_continue"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="18dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordError"
                tools:text="@string/reset_password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_semi_bold"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/login_now" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/tvLogin"
                    app:layout_constraintStart_toStartOf="@id/tvLogin"
                    app:layout_constraintTop_toBottomOf="@id/tvLogin" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>